--- a/index.html
+++ b/index.html
@@ -159,14 +159,17 @@ audio { width:100%; margin-top:6px; }
   <main class="content">
     <section id="works" class="panel" style="display:block">
       <h2>我的作品 / Works</h2>
-      <div class="track"><strong>Mr.Lee – For a character in Original Story</strong>
+      <div class="track"><strong>Mr.Lee – For a character in Original Story（2025/6）</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
       </div>
-      <div class="track"><strong>When we get there – 《NorthendTowerDefense》OST</strong>
-        <audio controls src="https://pan.vma.cc/pan/view.php/2bf32aeeecb5f15252f3ca05ca32ea0b.mp3"></audio>
-      </div>
-      <div class="track"><strong>JinSheTaChun – A music for forum</strong>
+      <div class="track"><strong>JinSheTaChun（金蛇踏春） – A music for forum(2025/1)</strong>
         <audio controls src="http://music.163.com/song/media/outer/url?id=2670051207.mp3"></audio>
+      </div>
+      <div class="track"><strong>Wulong（舞龙）[Piano.ver] – For a character in Original Story(2024/9)</strong>
+        <audio controls src="https://pan.vma.cc/pan/view.php/2e5647beaeb00ced8b1051f4cc5a7844.mp3"></audio>
+      </div>
+      <div class="track"><strong>When we get there – 《NorthendTowerDefense》OST(2023/3)</strong>
+        <audio controls src="https://pan.vma.cc/pan/view.php/2bf32aeeecb5f15252f3ca05ca32ea0b.mp3"></audio>
       </div>
     </section>
 
@@ -185,6 +188,7 @@ audio { width:100%; margin-top:6px; }
       <p>2026/1/30</p>
       <p>I'm a creator currently focusing heavily on music production. I also enjoy fitness, and once I’m in good enough shape, I plan to start sharing more of my life.</p>
       <p>我是一个自由职业者，现在非常喜欢把工作放在音乐制作上，同时我喜欢健身，等我身材变得足够好之后我想我会开始分享我的生活。</p>
+
     </section>
 
     <section id="contact" class="panel" style="display:none">
