--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@ audio { width:100%; margin-top:6px; }
   <main class="content">
     <section id="works" class="panel" style="display:block">
       <h2>我的作品 / Works</h2>
-      <div class="track"><strong>Mr.Lee – For a character in Original Story（2025/6）</strong>
+      <div class="track"><strong>Mr.Lee – For a character in Original Story  (2025/6)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
       </div>
-      <div class="track"><strong>JinSheTaChun（金蛇踏春） – A music for forum(2025/1)</strong>
+      <div class="track"><strong>JinSheTaChun（金蛇踏春） – A music for forum  (2025/1)</strong>
         <audio controls src="http://music.163.com/song/media/outer/url?id=2670051207.mp3"></audio>
       </div>
-      <div class="track"><strong>Wulong（舞龙）[Piano.ver] – For a character in Original Story(2024/9)</strong>
+      <div class="track"><strong>Wulong（舞龙）[Piano.ver] – For a character in Original Story  (2024/9)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/2e5647beaeb00ced8b1051f4cc5a7844.mp3"></audio>
       </div>
-      <div class="track"><strong>When we get there – 《NorthendTowerDefense》OST(2023/3)</strong>
+      <div class="track"><strong>When we get there – 《NorthendTowerDefense》OST  (2023/3)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/2bf32aeeecb5f15252f3ca05ca32ea0b.mp3"></audio>
       </div>
     </section>
