--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ audio { width:100%; margin-top:6px; }
   <main class="content">
     <section id="works" class="panel" style="display:block">
       <h2>我的作品 / Works</h2>
-      <div class="track"><strong>Mr.Lee – For a character in Original Story  (2025/6)</strong>
+      <div class="track"><strong>Mr.Lee – For a character in Original Story  (2025/12)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/8252e372881e256e4ed96779c8fac3ef.mp3"></audio>
       </div>
       <div class="track"><strong>JinSheTaChun（金蛇踏春） – A music for forum  (2025/1)</strong>
@@ -170,6 +170,12 @@ audio { width:100%; margin-top:6px; }
       </div>
       <div class="track"><strong>When we get there – 《NorthendTowerDefense》OST  (2023/3)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/2bf32aeeecb5f15252f3ca05ca32ea0b.mp3"></audio>
+      </div>
+      <div class="track"><strong>When the shadow is gone（黎明破晓之前） – Ordinary work  (2021/5)</strong>
+        <audio controls src="https://pan.vma.cc/pan/view.php/465cc81158c3ae97b1db1cdcaa0b8dfd.mp3"></audio>
+      </div>
+      <div class="track"><strong>The Border（境） – Ordinary work  (2021/3)</strong>
+        <audio controls src="https://pan.vma.cc/pan/view.php/a34057da96a0ed1466adfe005364900f.mp3"></audio>
       </div>
     </section>
 
