--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@ audio { width:100%; margin-top:6px; }
       <div class="track"><strong>When we get there – 《NorthendTowerDefense》OST  (2023/3)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/2bf32aeeecb5f15252f3ca05ca32ea0b.mp3"></audio>
       </div>
+      <div class="track"><strong>Abyssal Dissonance · Colorless Radiance（渊影乱奏·无色辉光） –  Ordinary work (2022/6)</strong>
+        <audio controls src="https://pan.vma.cc/pan/view.php/6a4eb7aae541b43a59cd6d52d82e5274.mp3"></audio>
+      </div>
       <div class="track"><strong>When the shadow is gone（黎明破晓之前） – Ordinary work  (2021/5)</strong>
         <audio controls src="https://pan.vma.cc/pan/view.php/465cc81158c3ae97b1db1cdcaa0b8dfd.mp3"></audio>
       </div>
